add figures and stablish their order

--- a/IEEE Journal/main.tex
+++ b/IEEE Journal/main.tex
@@ -621,8 +621,9 @@ Les éléments suivant sont partie du modèle et necessaire pour comprendre le f
 	 \item un entrée fixe: le bias
 \end{itemize}
 %todo mejorar redaction sobre la function sigmoided
-On a utilisé la fonction sigmoide comme fonction de transition. La fonction de activation est la fonction produit escalaire. Les connections entre neurones est faite par le bias du poids. Si la connections a un poid negative est une connection dite \textit{exhibitrice} si est positif est dite \textit{excitatrice}
-\subsection{Le perceptron : fonctions de transition classiques}\blindtext
+On a utilisé la fonction sigmoide comme fonction de transition. La fonction de activation est la fonction produit escalaire. Les connections entre neurones est faite par le bias du poids. Si la connections a un poid negative est une connection dite \textit{exhibitrice} si est positif est dite \textit{excitatrice}. C'est une manière de modeliser la force de la connection synaptique entre ce perceptron là et une autre à lequel est connecté.
+\subsection{Le perceptron : fonctions de transition classiques}
+Cette fonction nous permets de avoir .....
 \subsection{Le perceptron : rôle de l’unité de biais}\blindtext
 \subsection{L’erreur du perceptron : une fonction multidimensionelle}\blindtext
 
@@ -679,7 +680,7 @@ de neurones a une autre supplémentaires nous donne une
 	\label{fig_sim}
 \end{figure}
 
-\subsection{Cas d’un perceptron multicouche : calcul du vecteur gradient}\blindtext
+\section{Cas d’un perceptron multicouche : calcul du vecteur gradient}\blindtext
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -687,6 +688,36 @@ de neurones a une autre supplémentaires nous donne une
 % 	DOCUMENT LE PROGRAMME RS(SIMPLE)
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Cas d’un perceptron multicouche : implementations}\blindtext
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=2.5in]{../OctaveNeurons/rs3}
+	%TODO change the image and the caption and label
+	\caption{Simulation Results}
+	\label{fig_sim}
+\end{figure}
+
+\blindtext
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=2.5in]{../OctaveNeurons/rs2}
+	%TODO change the image and the caption and label
+	\caption{Simulation Results}
+	\label{fig_sim}
+\end{figure}
+\blindtext
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=2.5in]{../OctaveNeurons/rs1}
+	%TODO change the image and the caption and label
+	\caption{Simulation Results}
+	\label{fig_sim}
+\end{figure}
+\blindtext
+
+\section{Quelques règles à suivre...si on veut que cela converge}\blindtext
+\blindtext
+%todo foto de las curvas de convregencia
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=2.5in]{logo}
@@ -695,64 +726,100 @@ de neurones a une autre supplémentaires nous donne une
 	\label{fig_sim}
 \end{figure}
 
-
-
-\section{Quelques règles à suivre...si on veut que cela converge}\blindtext
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-% 	DOCUMENT LE PROGRAMME RS(SIMPLE)
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Technique 1 and resultats}\blindtext
 
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=2.5in]{logo}
-	%TODO change the image and the caption and label
-	\caption{Simulation Results}
-	\label{fig_sim}
-\end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % 	DOCUMENT LE PROGRAMME RS2
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Technique 2 and resultats}\blindtext
-
+\blindtext
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=2.5in]{logo}
+	\includegraphics[width=2.5in]{../OctaveNeurons/rs22}
 	%TODO change the image and the caption and label
 	\caption{Simulation Results}
 	\label{fig_sim}
 \end{figure}
+\blindtext
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=2.5in]{../OctaveNeurons/rs21}
+	%TODO change the image and the caption and label
+	\caption{Simulation Results}
+	\label{fig_sim}
+\end{figure}
+\blindtext
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=2.5in]{../OctaveNeurons/rs23}
+	%TODO change the image and the caption and label
+	\caption{Simulation Results}
+	\label{fig_sim}
+\end{figure}
+
+\section{Technique 2 and resultats}\blindtext
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % 	DOCUMENT LE PROGRAMME RS3
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Technique 3 and resultats}\blindtext
-
+\blindtext
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=2.5in]{logo}
+	\includegraphics[width=2.5in]{../OctaveNeurons/rs31}
 	%TODO change the image and the caption and label
 	\caption{Simulation Results}
 	\label{fig_sim}
 \end{figure}
+\blindtext
+
+\blindtext
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=2.5in]{../OctaveNeurons/rs33}
+	%TODO change the image and the caption and label
+	\caption{Simulation Results}
+	\label{fig_sim}
+\end{figure}
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=2.5in]{../OctaveNeurons/rs34}
+	%TODO change the image and the caption and label
+	\caption{Simulation Results}
+	\label{fig_sim}
+\end{figure}
+
+
+\section{Technique 5 and resultats}\blindtext
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % 	DOCUMENT LE PROGRAMME RS4
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Technique 5 and resultats}\blindtext
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=2.5in]{../OctaveNeurons/rs31}
+	%TODO change the image and the caption and label
+	\caption{Simulation Results}
+	\label{fig_sim}
+\end{figure}
+\blindtext
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=2.5in]{../OctaveNeurons/rs32}
+	%TODO change the image and the caption and label
+	\caption{Simulation Results}
+	\label{fig_sim}
+\end{figure}
+\blindtext
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=2.5in]{logo}
+	\includegraphics[width=2.5in]{../OctaveNeurons/rs34}
 	%TODO change the image and the caption and label
 	\caption{Simulation Results}
 	\label{fig_sim}
