all images and spaces are fixed and in a correct place, title done

--- a/IEEE Journal/main.tex
+++ b/IEEE Journal/main.tex
@@ -388,7 +388,10 @@
 %
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{Recherche Operationnelle}
+\title{Recherche Operationnelle\\Modélisation Paramétrique,
+	Filtrage Optimal\\ et Adaptatif\\Introduction au Data Mining
+	Réseaux de Neurones
+}
 %
 %
 % author names and IEEE memberships
@@ -817,13 +820,7 @@ de neurones a une autre supplémentaires nous donne une
 \end{figure}
 \blindtext
 
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=2.5in]{../OctaveNeurons/rs34}
-	%TODO change the image and the caption and label
-	\caption{Simulation Results}
-	\label{fig_sim}
-\end{figure}
+
 
 
 
